<resources>
    <string name="app_name">PretoriaNav</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Names</string>
    <string name="close">Nearby Landmarks</string>
    <string name="def">Acadia is the home of many thing and the first been diversity and creativity</string>
    <string name="create">Create an account</string>
    <string name="skip">Skip</string>
    <string name="click">By clicking Sign up you will be agreeing to our terms and privacy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_api_key">AIzaSyDDK3oPPrdKVojzrSjNToyI65_KYoOEE0U</string>
    <string-array name="filter">

        <item>Country</item>
        <item>Continent</item>
        <item>Ocean</item>
        <item>Culture</item>
    </string-array>
</resources>