<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:foregroundTint="#96222f3e"
    tools:context=".log_in">


    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_view"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sharp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="45dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:fontFamily="@font/sharp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/main"
            android:textColorHint="@color/main"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:fontFamily="@font/sharp"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:outlineSpotShadowColor="@color/white"
            android:textColor="@color/main"
            android:textColorHint="@color/main"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:fontFamily="@font/sharp"
            android:text="Sign In"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_redirect_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sharp"
            android:onClick="sign_up"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sharp"
            android:onClick="skip"
            android:text="@string/skip"
            android:textColor="@color/orange"
            android:textSize="15dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>