<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:foregroundTint="#96222f3e"
    tools:context=".sign_up">

    <FrameLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/trans"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sharp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="45dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:fontFamily="@font/sharp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:outlineSpotShadowColor="@color/white"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:fontFamily="@font/sharp"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:outlineSpotShadowColor="@color/white"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:fontFamily="@font/sharp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:outlineSpotShadowColor="@color/white"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/cPassword_editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:fontFamily="@font/sharp"
                android:hint="password confirm"
                android:inputType="textPassword"
                android:outlineSpotShadowColor="@color/white"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13dp" />


            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:fontFamily="@font/sharp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sharp"
                android:padding="10dp"
                android:text="@string/click"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="13dp" />


        </LinearLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>